src/kPExperiment/Recognizer/grammar/KpExperimentParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from KpExperiment.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class KpExperimentParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		Identifier=25, RelationalOperator=26, NumericLiteral=27, Ws=28, Comment=29, 
		LineComment=30;
	public const int
		RULE_kPExpriment = 0, RULE_ltlProperty = 1, RULE_ctlProperty = 2, RULE_ltlExpression = 3, 
		RULE_ctlExpression = 4, RULE_unaryExpression = 5, RULE_binaryExpression = 6, 
		RULE_notLtlExpression = 7, RULE_alwaysExpression = 8, RULE_eventuallyExpression = 9, 
		RULE_nextExpression = 10, RULE_neverExpression = 11, RULE_infinitelyOftenExpression = 12, 
		RULE_steadyStateExpression = 13, RULE_untilExpression = 14, RULE_weakUntilExpression = 15, 
		RULE_followedByExpression = 16, RULE_precededByExpression = 17, RULE_equivalenceExpression = 18, 
		RULE_implicationExpression = 19, RULE_orExpression = 20, RULE_andExpression = 21, 
		RULE_ltlExpressionOperand = 22, RULE_notExpression = 23, RULE_relationalExpression = 24, 
		RULE_arithmeticExpression = 25, RULE_arithmeticAddition = 26, RULE_arithmeticMultiplication = 27, 
		RULE_arithmeticOperand = 28, RULE_objectMultiplicity = 29;
	public static readonly string[] ruleNames = {
		"kPExpriment", "ltlProperty", "ctlProperty", "ltlExpression", "ctlExpression", 
		"unaryExpression", "binaryExpression", "notLtlExpression", "alwaysExpression", 
		"eventuallyExpression", "nextExpression", "neverExpression", "infinitelyOftenExpression", 
		"steadyStateExpression", "untilExpression", "weakUntilExpression", "followedByExpression", 
		"precededByExpression", "equivalenceExpression", "implicationExpression", 
		"orExpression", "andExpression", "ltlExpressionOperand", "notExpression", 
		"relationalExpression", "arithmeticExpression", "arithmeticAddition", 
		"arithmeticMultiplication", "arithmeticOperand", "objectMultiplicity"
	};

	private static readonly string[] _LiteralNames = {
		null, "'ltl'", "':'", "';'", "'ctl'", "'not'", "'always'", "'eventually'", 
		"'next'", "'never'", "'infinitely-often'", "'steady-state'", "'until'", 
		"'weak-until'", "'followed-by'", "'preceded-by'", "'equivalent'", "'implies'", 
		"'or'", "'and'", "'('", "')'", "'+'", "'*'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "Identifier", "RelationalOperator", "NumericLiteral", "Ws", "Comment", 
		"LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "KpExperiment.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static KpExperimentParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}


	        protected const int EOF = Eof;

		public KpExperimentParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KpExperimentParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class KPExprimentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(KpExperimentParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LtlPropertyContext[] ltlProperty() {
			return GetRuleContexts<LtlPropertyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LtlPropertyContext ltlProperty(int i) {
			return GetRuleContext<LtlPropertyContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CtlPropertyContext[] ctlProperty() {
			return GetRuleContexts<CtlPropertyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CtlPropertyContext ctlProperty(int i) {
			return GetRuleContext<CtlPropertyContext>(i);
		}
		public KPExprimentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_kPExpriment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitKPExpriment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public KPExprimentContext kPExpriment() {
		KPExprimentContext _localctx = new KPExprimentContext(Context, State);
		EnterRule(_localctx, 0, RULE_kPExpriment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 62;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case T__0:
					{
					State = 60;
					ltlProperty();
					}
					break;
				case T__3:
					{
					State = 61;
					ctlProperty();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 64;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__0 || _la==T__3 );
			State = 66;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LtlPropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LtlExpressionContext ltlExpression() {
			return GetRuleContext<LtlExpressionContext>(0);
		}
		public LtlPropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ltlProperty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLtlProperty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LtlPropertyContext ltlProperty() {
		LtlPropertyContext _localctx = new LtlPropertyContext(Context, State);
		EnterRule(_localctx, 2, RULE_ltlProperty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(T__0);
			State = 69;
			Match(T__1);
			State = 70;
			ltlExpression();
			State = 71;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CtlPropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CtlExpressionContext ctlExpression() {
			return GetRuleContext<CtlExpressionContext>(0);
		}
		public CtlPropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ctlProperty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCtlProperty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CtlPropertyContext ctlProperty() {
		CtlPropertyContext _localctx = new CtlPropertyContext(Context, State);
		EnterRule(_localctx, 4, RULE_ctlProperty);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			Match(T__3);
			State = 74;
			Match(T__1);
			State = 75;
			ctlExpression();
			State = 76;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LtlExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UnaryExpressionContext unaryExpression() {
			return GetRuleContext<UnaryExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BinaryExpressionContext binaryExpression() {
			return GetRuleContext<BinaryExpressionContext>(0);
		}
		public LtlExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ltlExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLtlExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LtlExpressionContext ltlExpression() {
		LtlExpressionContext _localctx = new LtlExpressionContext(Context, State);
		EnterRule(_localctx, 6, RULE_ltlExpression);
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 78;
				unaryExpression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 79;
				binaryExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CtlExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UnaryExpressionContext unaryExpression() {
			return GetRuleContext<UnaryExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BinaryExpressionContext binaryExpression() {
			return GetRuleContext<BinaryExpressionContext>(0);
		}
		public CtlExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ctlExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCtlExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CtlExpressionContext ctlExpression() {
		CtlExpressionContext _localctx = new CtlExpressionContext(Context, State);
		EnterRule(_localctx, 8, RULE_ctlExpression);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 82;
				unaryExpression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83;
				binaryExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnaryExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NotLtlExpressionContext notLtlExpression() {
			return GetRuleContext<NotLtlExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EventuallyExpressionContext eventuallyExpression() {
			return GetRuleContext<EventuallyExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AlwaysExpressionContext alwaysExpression() {
			return GetRuleContext<AlwaysExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NextExpressionContext nextExpression() {
			return GetRuleContext<NextExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NeverExpressionContext neverExpression() {
			return GetRuleContext<NeverExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InfinitelyOftenExpressionContext infinitelyOftenExpression() {
			return GetRuleContext<InfinitelyOftenExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SteadyStateExpressionContext steadyStateExpression() {
			return GetRuleContext<SteadyStateExpressionContext>(0);
		}
		public UnaryExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unaryExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnaryExpressionContext unaryExpression() {
		UnaryExpressionContext _localctx = new UnaryExpressionContext(Context, State);
		EnterRule(_localctx, 10, RULE_unaryExpression);
		try {
			State = 93;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				EnterOuterAlt(_localctx, 1);
				{
				State = 86;
				notLtlExpression();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87;
				eventuallyExpression();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 3);
				{
				State = 88;
				alwaysExpression();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 4);
				{
				State = 89;
				nextExpression();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 5);
				{
				State = 90;
				neverExpression();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 6);
				{
				State = 91;
				infinitelyOftenExpression();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 7);
				{
				State = 92;
				steadyStateExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BinaryExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UntilExpressionContext untilExpression() {
			return GetRuleContext<UntilExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WeakUntilExpressionContext weakUntilExpression() {
			return GetRuleContext<WeakUntilExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FollowedByExpressionContext followedByExpression() {
			return GetRuleContext<FollowedByExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrecededByExpressionContext precededByExpression() {
			return GetRuleContext<PrecededByExpressionContext>(0);
		}
		public BinaryExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_binaryExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BinaryExpressionContext binaryExpression() {
		BinaryExpressionContext _localctx = new BinaryExpressionContext(Context, State);
		EnterRule(_localctx, 12, RULE_binaryExpression);
		try {
			State = 99;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95;
				untilExpression();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96;
				weakUntilExpression();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 97;
				followedByExpression();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 98;
				precededByExpression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NotLtlExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LtlExpressionContext ltlExpression() {
			return GetRuleContext<LtlExpressionContext>(0);
		}
		public NotLtlExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_notLtlExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotLtlExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NotLtlExpressionContext notLtlExpression() {
		NotLtlExpressionContext _localctx = new NotLtlExpressionContext(Context, State);
		EnterRule(_localctx, 14, RULE_notLtlExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			Match(T__4);
			State = 102;
			ltlExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AlwaysExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceExpressionContext equivalenceExpression() {
			return GetRuleContext<EquivalenceExpressionContext>(0);
		}
		public AlwaysExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_alwaysExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAlwaysExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AlwaysExpressionContext alwaysExpression() {
		AlwaysExpressionContext _localctx = new AlwaysExpressionContext(Context, State);
		EnterRule(_localctx, 16, RULE_alwaysExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			Match(T__5);
			State = 105;
			equivalenceExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EventuallyExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceExpressionContext equivalenceExpression() {
			return GetRuleContext<EquivalenceExpressionContext>(0);
		}
		public EventuallyExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eventuallyExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEventuallyExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EventuallyExpressionContext eventuallyExpression() {
		EventuallyExpressionContext _localctx = new EventuallyExpressionContext(Context, State);
		EnterRule(_localctx, 18, RULE_eventuallyExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			Match(T__6);
			State = 108;
			equivalenceExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NextExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceExpressionContext equivalenceExpression() {
			return GetRuleContext<EquivalenceExpressionContext>(0);
		}
		public NextExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nextExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNextExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NextExpressionContext nextExpression() {
		NextExpressionContext _localctx = new NextExpressionContext(Context, State);
		EnterRule(_localctx, 20, RULE_nextExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			Match(T__7);
			State = 111;
			equivalenceExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NeverExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceExpressionContext equivalenceExpression() {
			return GetRuleContext<EquivalenceExpressionContext>(0);
		}
		public NeverExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_neverExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNeverExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NeverExpressionContext neverExpression() {
		NeverExpressionContext _localctx = new NeverExpressionContext(Context, State);
		EnterRule(_localctx, 22, RULE_neverExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			Match(T__8);
			State = 114;
			equivalenceExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InfinitelyOftenExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceExpressionContext equivalenceExpression() {
			return GetRuleContext<EquivalenceExpressionContext>(0);
		}
		public InfinitelyOftenExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_infinitelyOftenExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInfinitelyOftenExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InfinitelyOftenExpressionContext infinitelyOftenExpression() {
		InfinitelyOftenExpressionContext _localctx = new InfinitelyOftenExpressionContext(Context, State);
		EnterRule(_localctx, 24, RULE_infinitelyOftenExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			Match(T__9);
			State = 117;
			equivalenceExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SteadyStateExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EquivalenceExpressionContext equivalenceExpression() {
			return GetRuleContext<EquivalenceExpressionContext>(0);
		}
		public SteadyStateExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_steadyStateExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKpExperimentVisitor<TResult> typedVisitor = visitor as IKpExperimentVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSteadyStateExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SteadyStateExpressionContext steadyStateExpression() {
		SteadyStateExpressionContext _localctx = new SteadyStateExpressionContext(Context, State);
		EnterRule(_localctx, 26, RULE_steadyStateExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			Match(T__10);
			State = 120;
			equivalenceExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
